--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#228B22"
-                android:endColor="#90EE90"
+                android:startColor="@color/colorTheme"
+                android:endColor="@color/colorThemeFaded"
                 android:type="linear" />
         </shape>
 
