--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+<!--    <color name="purple_200">#FFBB86FC</color>-->
+<!--    <color name="purple_500">#FF6200EE</color>-->
+<!--    <color name="purple_700">#FF3700B3</color>-->
+    <color name="purple_200">#e82e5f</color>
+    <color name="purple_500">#e82e5f</color>
+    <color name="purple_700">#e82e5f</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -16,6 +19,9 @@
     <color name="colorBlack">#232323</color>
     <color name="colorTheme">#e82e5f</color>
     <color name="colorThemeFaded">#40e82e5f</color>
+
+<!--    <color name="colorTheme">#228B22</color>-->
+<!--    <color name="colorThemeFaded">#90EE90</color>-->
     <color name="colorWhite">#ffffff</color>
     <color name="colorRed">@android:color/holo_red_dark</color>
     <color name="colorGreen">@android:color/holo_green_dark</color>
