--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -84,7 +84,63 @@ android:layout_height="match_parent">
                 </LinearLayout>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_100sdp"
+            android:layout_marginStart="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_2sdp"
+            android:layout_marginBottom="@dimen/_2sdp"
+            android:layout_weight="1"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="@dimen/_10sdp">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorGrey1" />
+
+                <ImageView
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="@dimen/_50sdp"
+                    android:contentDescription="@string/todo"
+                    android:src="@drawable/ic_baseline_leaderboard_24"
+                    android:layout_margin="@dimen/_10sdp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    app:tint="@android:color/holo_blue_dark" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/background_wave"
+                    android:backgroundTint="#200099cc"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:padding="@dimen/_10sdp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:text="@string/your_rank"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:text="@string/your_rank_number"
+                        android:textColor="@android:color/holo_blue_dark"
+                        android:textSize="24sp" />
+                </LinearLayout>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -122,12 +178,26 @@ android:layout_height="match_parent">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/average_rating_last_month"
+                    android:text="@string/stars_earned"
                     android:textColor="@color/colorGrey"
                     android:textSize="15sp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:text="@string/ranking_overview"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:textColor="@color/colorTheme"
+            android:textSize="@dimen/_18sdp"
+            android:textStyle="bold"/>
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="@dimen/_100sdp"
@@ -152,7 +222,7 @@ android:layout_height="match_parent">
                     android:layout_width="@dimen/_50sdp"
                     android:layout_height="@dimen/_50sdp"
                     android:contentDescription="@string/todo"
-                    android:src="@drawable/ic_jacket"
+                    android:src="@drawable/ic_baseline_star_24"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_margin="@dimen/_10sdp"
@@ -171,7 +241,7 @@ android:layout_height="match_parent">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_5sdp"
-                        android:text="@string/orders"
+                        android:text="@string/first_place"
                         android:textColor="@color/colorBlack"
                         android:textSize="18sp" />
 
@@ -185,18 +255,6 @@ android:layout_height="match_parent">
                 </LinearLayout>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/activity_overview"
-            android:layout_marginStart="@dimen/_5sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:layout_marginEnd="@dimen/_5sdp"
-            android:textColor="@color/colorTheme"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
-
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="@dimen/_100sdp"
@@ -221,7 +279,7 @@ android:layout_height="match_parent">
                     android:layout_width="@dimen/_50sdp"
                     android:layout_height="@dimen/_50sdp"
                     android:contentDescription="@string/todo"
-                    android:src="@drawable/ic_delivery"
+                    android:src="@drawable/ic_baseline_leaderboard_24"
                     android:layout_margin="@dimen/_10sdp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
@@ -240,7 +298,7 @@ android:layout_height="match_parent">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_5sdp"
-                        android:text="@string/deliveries"
+                        android:text="@string/your_rank"
                         android:textColor="@color/colorBlack"
                         android:textSize="18sp" />
 
@@ -248,7 +306,7 @@ android:layout_height="match_parent">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_5sdp"
-                        android:text="@string/_1530"
+                        android:text="@string/your_rank_number"
                         android:textColor="@android:color/holo_blue_dark"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -297,14 +355,14 @@ android:layout_height="match_parent">
                             android:layout_width="@dimen/_30sdp"
                             android:layout_height="@dimen/_30sdp"
                             android:contentDescription="@string/todo"
-                            android:src="@drawable/ic_cash"
+                            android:src="@drawable/ic_baseline_school_24"
                             app:tint="@android:color/holo_orange_dark" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_5sdp"
-                            android:text="@string/total_sales"
+                            android:text="@string/school_rank"
                             android:textColor="@color/colorBlack"
                             android:textSize="18sp" />
 
@@ -312,9 +370,9 @@ android:layout_height="match_parent">
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_5sdp"
-                            android:text="@string/_200"
+                            android:text="@string/school_rank_num"
                             android:textColor="@android:color/holo_orange_dark"
-                            android:textSize="24sp" />
+                            android:textSize="18sp" />
                     </LinearLayout>
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
@@ -354,14 +412,14 @@ android:layout_height="match_parent">
                             android:layout_width="@dimen/_30sdp"
                             android:layout_height="@dimen/_30sdp"
                             android:contentDescription="@string/todo"
-                            android:src="@drawable/ic_product"
+                            android:src="@drawable/ic_baseline_class_24"
                             app:tint="@android:color/holo_green_dark" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_5sdp"
-                            android:text="@string/pending"
+                            android:text="@string/class_rank"
                             android:textColor="@color/colorBlack"
                             android:textSize="18sp" />
 
@@ -369,9 +427,9 @@ android:layout_height="match_parent">
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_5sdp"
-                            android:text="@string/_190"
+                            android:text="@string/class_rank_num"
                             android:textColor="@android:color/holo_green_dark"
-                            android:textSize="24sp" />
+                            android:textSize="18sp" />
                     </LinearLayout>
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
@@ -382,7 +440,7 @@ android:layout_height="match_parent">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_50sdp"
+        android:layout_marginBottom="@dimen/_75sdp"
         android:layout_marginStart="@dimen/_15sdp"
         android:layout_marginEnd="@dimen/_15sdp"
         app:cardElevation="0dp"
@@ -412,7 +470,7 @@ android:layout_height="match_parent">
                     android:layout_height="wrap_content"
                     android:layout_weight=".5"
                     android:gravity="start"
-                    android:text="@string/most_sales_demin_jeans"
+                    android:text="@string/most_activities"
                     android:textColor="@color/colorGrey"
                     android:textSize="12sp" />
 
@@ -421,11 +479,35 @@ android:layout_height="match_parent">
                     android:layout_height="wrap_content"
                     android:layout_weight=".5"
                     android:gravity="end"
-                    android:text="@string/demin_jeans"
+                    android:text="@string/most_activities_name_count"
                     android:textColor="@color/colorGrey"
                     android:textSize="12sp"
                     android:textStyle="bold" />
             </LinearLayout>
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="@dimen/_2sdp"-->
+<!--                android:orientation="horizontal">-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="@string/average"-->
+<!--                    android:textColor="@color/colorGrey"-->
+<!--                    android:textSize="12sp" />-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight=".5"-->
+<!--                    android:gravity="end"-->
+<!--                    android:text="@string/nike_boots"-->
+<!--                    android:textColor="@color/colorGrey"-->
+<!--                    android:textSize="12sp"-->
+<!--                    android:textStyle="bold" />-->
+<!--            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -436,7 +518,7 @@ android:layout_height="match_parent">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/average"
+                    android:text="@string/least_activities"
                     android:textColor="@color/colorGrey"
                     android:textSize="12sp" />
 
@@ -445,31 +527,7 @@ android:layout_height="match_parent">
                     android:layout_height="wrap_content"
                     android:layout_weight=".5"
                     android:gravity="end"
-                    android:text="@string/nike_boots"
-                    android:textColor="@color/colorGrey"
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/least_sales"
-                    android:textColor="@color/colorGrey"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight=".5"
-                    android:gravity="end"
-                    android:text="@string/baggy_pants"
+                    android:text="@string/least_activities_name_count"
                     android:textColor="@color/colorGrey"
                     android:textSize="12sp"
                     android:textStyle="bold" />
