--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:typeface">serif</item>
+        <item name="android:fontFamily">@font/lgb</item>
     </style>
 
     <style name="TextInputLayoutTextAppearance" parent="TextAppearance.AppCompat">
@@ -17,13 +17,13 @@
         <item name="colorControlNormal">@android:color/holo_green_light</item>
     </style>
     <style name="TitleBarTextAppearance" parent="android:TextAppearance">
-        <item name="android:typeface">serif</item>
+        <item name="android:fontFamily">@font/lgb</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
     <style name="TitleBarTextAppearance2" parent="android:TextAppearance">
-        <item name="android:typeface">serif</item>
+        <item name="android:fontFamily">@font/lgb</item>
         <item name="android:textSize">23sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@android:color/black</item>
