--- a/app/src/main/res/layout/activity_start_login.xml
+++ b/app/src/main/res/layout/activity_start_login.xml
@@ -53,7 +53,15 @@
         app:lottie_loop="true"
         tools:ignore="DuplicateIds" />
 
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/app_name"
+    android:layout_centerInParent="true"
+    android:layout_alignBottom="@+id/ivAppLogo2"
+    android:textColor="@color/white"
+    
+    ></TextView>
     </RelativeLayout>
 
 <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
