animate app name
animate app name

--- a/app/src/main/res/layout/activity_start_login.xml
+++ b/app/src/main/res/layout/activity_start_login.xml
@@ -53,15 +53,17 @@
         app:lottie_loop="true"
         tools:ignore="DuplicateIds" />
 
-<TextView
+<com.jkdeers.activitygame.TypeWriter
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/app_name"
+    android:id="@+id/appname"
     android:layout_centerInParent="true"
     android:layout_alignBottom="@+id/ivAppLogo2"
     android:textColor="@color/white"
-    
-    ></TextView>
+    android:textSize="@dimen/_18sdp"
+
+    ></com.jkdeers.activitygame.TypeWriter>
     </RelativeLayout>
 
 <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
