--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape>
-            <gradient
-                android:startColor="@color/colorTheme"
-                android:endColor="@color/colorThemeFaded"
-                android:type="linear" />
-        </shape>
-
 <!--        <shape>-->
 <!--            <gradient-->
-<!--                android:gradientRadius="300dp"-->
-<!--                android:endColor="#90EE90"-->
-<!--                android:startColor="#228B22"-->
-<!--                android:type="radial" />-->
+<!--                android:startColor="@color/colorTheme"-->
+<!--                android:endColor="@color/colorThemeFaded"-->
+<!--                android:type="linear" />-->
 <!--        </shape>-->
+
+        <shape>
+            <gradient
+                android:gradientRadius="300dp"
+                android:endColor="#181918"
+                android:startColor="#394039"
+                android:type="radial" />
+        </shape>
     </item>
 </selector>
