--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -103,14 +103,15 @@
                 android:textColor="@color/colorWhite" />
 
             <Button
-                android:id="@+id/btnSignUp"
+                android:id="@+id/btnAddPhoto"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_40sdp"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/button_background_dark"
+                android:elevation="4dp"
                 android:text="@string/add_photo"
-                android:textAllCaps="false"
-                android:textColor="@color/colorWhite" />
+
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:textAllCaps="false" />
 
             <ImageView
                 android:layout_width="@dimen/_200sdp"
@@ -123,7 +124,7 @@
             </ImageView>
 
             <Button
-                android:id="@+id/btnLogin"
+                android:id="@+id/btnAddActivity"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_40sdp"
                 android:background="@drawable/button_background_dark"
