--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -119,6 +119,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/_10sdp"
                 android:visibility="gone"
+                android:id="@+id/imageCapture"
                 android:src="@drawable/kidsavesearthresized">
 
             </ImageView>
