--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -51,6 +51,7 @@
 
             <TextView
                 android:layout_width="wrap_content"
+                android:id="@+id/addActivityTitle"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
@@ -137,5 +138,19 @@
         </LinearLayout>
         </ScrollView>
 <!--    </RelativeLayout>-->
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/addedLottie"
+        android:layout_width="@dimen/_75sdp"
+        android:layout_height="@dimen/_75sdp"
+        android:layout_centerInParent="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="addedjson.json"
+        app:lottie_loop="true"
+        android:visibility="gone"
+        tools:ignore="DuplicateIds" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
